@@ -32,7 +32,7 @@ noinst_HEADERS = \
 	bonobo-ui-toolbar-separator-item.h	\
 	bonobo-ui-xml.h
 
-libbonoboincludedir = $(includedir)/gnome-2.0/bonobo
+libbonoboincludedir = $(includedir)/libbonoboui-2.0/bonobo
 
 libbonoboinclude_HEADERS = \
 	bonobo-canvas-component.h		\
