@@ -8,4 +8,4 @@ Description: libbonoboui
 Requires: glib-2.0 ORBit-2.0 libxml-2.0 libbonobo-2.0
 Version: @VERSION@
 Libs: -L${libdir} -lbonoboui-2
-Cflags: -I${includedir}/gnome-2.0
+Cflags: -I${includedir}/libbonoboui-2.0
